--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.14",
     "@mui/styles": "^5.15.14",
     "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.9.0",
     "react-dom": "^18.2.0",
