--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "swagjewellry",
+  "homepage": "./",
+  "name": "swagjewelers",
   "private": true,
   "version": "0.0.0",
   "type": "module",
