--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
+    "toastr": "^2.1.4",
     "use-places-autocomplete": "^4.0.1"
   },
   "devDependencies": {
